--- a/index.html
+++ b/index.html
@@ -5,3 +5,36 @@
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+<div id="namecard">
+  <div id="inner_box">
+   
+     <div id="name" class="right">
+        Jane Ye 
+     </div>
+       <div id="job-title" class="right">
+        Senior Analyst @ DBS
+       </div>
+    <div id="line"></div>
+    <a href='http://www.twitter.com'>
+     <i class="fa icon fa-twitter most-right" aria-hidden="true"></i> </a>
+    <a href='http://www.instagram.com'>
+      <i class="fa icon fa-instagram" aria-hidden="true"></i></a>
+    <a href='http://www.facebook.com'>
+      <i class="fa icon fa-facebook" aria-hidden="true"></i></a>
+    <div id="bottom-icon">
+       
+      Y
+  </div>
+</div>
+</div>
+
+<div id="other-box">
+  <div id="other-box-text">
+    Hello!
+  </div>
+</div>
+       
+<img id='background' src='http://images.unsplash.com/photo-1433162653888-a571db5ccccf?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&s=5af0fb2de95e3e0007dd5d0ea9214822'>
