--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
-<link rel="stylesheet" type="text/css" href="body.css" />
+<style media="body" type="text/css">
+
+
 
 <div id="namecard">
   <div id="inner_box">
@@ -34,3 +36,5 @@
 </div>
        
 <img id='background' src='http://images.unsplash.com/photo-1433162653888-a571db5ccccf?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&s=5af0fb2de95e3e0007dd5d0ea9214822'>
+
+</style>
