change the font
try to change the font

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="body.css">
 
 <div id="namecard">
